[project]
name = "mays-backend"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt==0.8",
    "fastapi==0.111.0",
    "httpx==0.27.2",
    "litellm==1.60.0",
    "llama-index-core==0.12.14",
    "llama-index-embeddings-huggingface==0.5.1",
    "llama-index-embeddings-mistralai==0.3.0",
    "llama-index-embeddings-ollama==0.5.0",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-embeddings-voyageai==0.3.4",
    "llama-index-llms-deepseek==0.1.0",
    "llama-index-llms-huggingface==0.4.2",
    "llama-index-llms-mistralai==0.3.2",
    "llama-index-llms-ollama==0.5.0",
    "llama-index-llms-openai==0.3.14",
    "llama-index-multi-modal-llms-ollama==0.4.0",
    "llama-index-postprocessor-voyageai-rerank==0.3.2",
    "llama-index-readers-file==0.4.4",
    "llama-index-retrievers-bm25==0.5.2",
    "mistralai==1.4.0",
    "nltk==3.9.1",
    "numpy==2.2.2",
    "ollama==0.4.7",
    "openai==1.60.2",
    "pandas==2.2.2",
    "pydantic==2.10.6",
    "pymupdf==1.24.7",
    "pypdf==5.2.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "sentence-transformers==3.4.0",
    "sympy==1.13.3",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "transformers==4.48.0",
    "uvicorn==0.30.1",
    "uvloop==0.21.0",
    "voyageai==0.3.2",
]

# ruff check
# ruff format --diff
# isort . --diff

[tool.ruff]
line-length = 88
target-version = "py312"
output-format  = "full"

[tool.ruff.lint]
select = [
    # flake8-async
    "ASYNC",
    # pyflakes
    "F",
    # pycodestyle(Error, Warning)
    "E",
    "W",
    # flake8-2020
    "YTT",
    # flake8-bugbear
    "B",
    # pandas-vet
    "PD",
    # NumPy-specific rules
    "NPY",
    # Ruff-specific rules
    "RUF",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
reverse_relative = true
